# Chisel3

./: CMakeLists.txt  GLSLFileLoader.cpp  GLSLFileLoader.h  README.md  arraybufferobject.cpp  arraybufferobject.h  bufferlockmanager.cpp  bufferlockmanager.h  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  cerealglm.h  chisel.cpp  chisel.h  circle.cpp  circle.h  computejob.cpp  computejob.h  computetech.cpp  computetech.h  cone.cpp  cone.h  const.h  constant.h  cylinder.cpp  cylinder.h  databasetable.cpp  databasetable.h  disk.cpp  disk.h  fbobject.cpp  fbobject.h  fbxexporter.cpp  fbxexporter.h  fbxloader.cpp  fbxloader.h  fileloader.cpp  fileloader.h  fontmanager.cpp  (+72 more)
OpParser/: .directory  CMakeLists.txt  CMakeLists2.txt  OErrorListener.cpp  OErrorListener.h  OLexer.cpp  OLexer.g4  OLexer.h  OLexer.tokens  OParser.cpp  OParser.g4  OParser.h  OParser.tokens  OParserBaseListener.cpp  OParserBaseListener.h  OParserBaseVisitor.cpp  OParserBaseVisitor.h  OParserListener.cpp  OParserListener.h  OParserVisitor.cpp  OParserVisitor.h  translator.cpp  translator.h
QtUI/: .databaseeditorlayout.h.kate-swp  .directory  CMakeLists.txt  activelayerbuttondelegate.cpp  activelayerbuttondelegate.h  activelayerdelegate.cpp  activelayerdelegate.h  activelayeritem.cpp  activelayeritem.h  activelayermodel.cpp  activelayermodel.h  activelayertreeview.cpp  activelayertreeview.h  areapervaluemodel.cpp  areapervaluemodel.h  areastatisticsdialog.cpp  areastatisticsdialog.h  areastatisticsdialog.ui  balloondialog.cpp  balloondialog.h  balloonmessagedialog.cpp  balloonmessagedialog.h  balloonvaluedialog.cpp  balloonvaluedialog.h  balloonwidget.cpp  balloonwidget.h  cellareadialog.cpp  cellareadialog.h  columnselectionmodel.cpp  columnselectionmodel.h  columnvisibilitymodel.cpp  columnvisibilitymodel.h  columnvisibilitywidget.cpp  columnvisibilitywidget.h  computecurvaturedialog.ui  computelayerdialog.cpp  computelayerdialog.h  computelayerdialog.ui  controlpointvalidator.cpp  controlpointvalidator.h  (+118 more)
QtUI/resources/: .directory
lib/headers/: tolua.h
lib/headers/fbxsdk/core/math/: fbxmath.h
lib/headers/glbinding/: glbinding-version.h  glbinding_features.h
lib/windows/debug/: antlr4-runtimed.lib  freetype265MTd.lib  freetype265d.lib  glbinding.lib
lib/windows/release/: antlr4-runtime.lib  freetype265.lib  freetype265MT.lib
models/: cube.fbx
shaders/: .directory  AddSobelFilter.frag  AddSobelFilterWithFocus.frag  ConstructStrokesDetails.frag  DetermineStroke.frag  EnlargeStroke.frag  GSAppendParticlesLarge.geom  GSAppendParticlesLargeForVideo.geom  GSAppendParticlesMedium.geom  GSAppendParticlesSmall.geom  GSConstructParticlesLarge.geom  GSConstructParticlesMedium.geom  GSConstructParticlesSmall.geom  GSDeleteParticlesLarge.geom  GSDeleteParticlesMedium.geom  GSDeleteParticlesSmall.geom  GSRenderOpticalFlow.geom  GSRenderParticles.geom  GSRenderParticlesOnlyModel.geom  GSUpdateParticlesLarge.geom  GSUpdateParticlesMedium.geom  GSUpdateParticlesSmall.geom  GaussianSmooth3x3.frag  GaussianSmooth5x5.frag  Gradient.frag  MedianFilter.frag  OpticalFlowI1.frag  OpticalFlowI2.frag  Original.frag  PSRenderOpticalFlow.frag  PSRenderParticles.frag  PSRenderScene.frag  PreOpticalFlow.frag  RenderDeletingPosition.frag  RenderEmptyPosition.frag  RenderGradient.frag  RenderMipMap.frag  RenderModelMatte.frag  RenderModelOnVideoFrame.frag  RenderOpticalFlow.frag  (+97 more)
